docs: Add extra navigation links

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -11,11 +11,35 @@
     "<li><a href=\"#taloc\">Taloc</a></li>\n",
     "<li><a href=\"#mother\">MOTHER</a></li>\n",
     "<li><a href=\"#zekvoz\">Zek'voz</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#rings\">Surging Darkness (Rings)</a></li>\n",
+    "        <li><a href=\"#add-dot\">Jagged Mandible (Add Dot)</a></li>\n",
+    "        <li><a href=\"#interrupts\">Interrupts/Stuns</a></li>\n",
+    "        <li><a href=\"#tank-heals\">Tanking Healing</a></li>\n",
+    "    </ul></li>\n",
     "<li><a href=\"#vectis\">Vectis</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#soaks\">Plague Bomb (Soaks)</a></li>\n",
+    "        <li><a href=\"#v-stack\">Lingering Infection (Debuff Stacks)</a></li>\n",
+    "    </ul></li>\n",
     "<li><a href=\"#fetid\">Fetid</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#f-stacks\">Debuff Damage</a></li>\n",
+    "        <li><a href=\"#add-dam\">Add Damage</a></li>\n",
+    "    </ul></li>\n",
     "<li><a href=\"#zul\">Zul</a>\n",
     "<li><a href=\"#mythrax\">Mythrax</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#beam\">Obliteration Blast (Beam)</a></li>\n",
+    "        <li><a href=\"#m-stacks\">Annihilation (Debuff Stacks)</a></li>\n",
+    "    </ul></li>\n",
     "<li><a href=\"#ghuun\">G'Huun</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#fear\">Gaze of G'huun (Fears)</a></li>\n",
+    "        <li><a href=\"#orb\">Virulent Corruption (Orb)</a></li>\n",
+    "        <li><a href=\"#growth\">Malignant Growth</a></li>\n",
+    "        <li><a href=\"#dunk\">Power Matrix Dunk</a></li>\n",
+    "    </ul></li>\n",
     "<li><a href=\"#overall\">Overall</a>\n",
     "    <ul>\n",
     "        <li><a href=\"#pots\">Most Pots Used</a></li>\n",
@@ -2467,6 +2491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='rings'></a>\n",
     "### Surging Darkness \n",
     "Rings damage, IDs:\n",
     "- 275084\n",
@@ -3164,6 +3189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='add-dot'></a>\n",
     "### Jagged Mandible\n",
     "264210"
    ]
@@ -3592,6 +3618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='interrupts'></a>\n",
     "### Interrupts\n",
     "Spell IDs:\n",
     "- Mage: Counterspell (2139), ~~Dragon's Breath (31661)~~\n",
@@ -4621,6 +4648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='soaks'></a>\n",
     "### Most Plague Bomb Soaks\n",
     "ID: 266948"
    ]
@@ -4980,6 +5008,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='v-stacks'></a>\n",
     "### Lingering Infection\n",
     "ID: 265127"
    ]
@@ -5338,6 +5367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='f-stacks'></a>\n",
     "### Debuff Stacks\n",
     "IDs:\n",
     "- Malodorous Miasma: 262313\n",
@@ -5861,6 +5891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='add-dam'></a>\n",
     "### Add Damage"
    ]
   },
@@ -6956,7 +6987,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Obliteration Blast \n",
+    "<a id='beam'></a>\n",
+    "### Obliteration Blast (Beam)\n",
     "ID: 273554"
    ]
   },
@@ -7266,7 +7298,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Annihilation\n",
+    "<a id='m-stacks'></a>\n",
+    "### Annihilation (Debuff Stacks)\n",
     "ID: 272146"
    ]
   },
@@ -7581,6 +7614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='fear'></a>\n",
     "### Gaze of G'Huun\n",
     "ID: 267700"
    ]
@@ -7886,6 +7920,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='orb'></a>\n",
     "### Virulent Corruption\n",
     "ID: 273486"
    ]
@@ -8322,6 +8357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='growth'></a>\n",
     "### Malignant Growth\n",
     "ID: 274577"
    ]
@@ -8583,6 +8619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='dunk'></a>\n",
     "### Power Matrix Dunk\n",
     "ID: 263372"
    ]
@@ -15352,32 +15389,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "boss_name\n",
-       "Fetid Devourer    2\n",
+       "Fetid Devourer    3\n",
        "G'huun            1\n",
-       "MOTHER            2\n",
+       "MOTHER            8\n",
        "Mythrax           1\n",
        "Taloc             8\n",
-       "Vectis            1\n",
-       "Zek'voz           4\n",
+       "Vectis            4\n",
+       "Zek'voz           6\n",
        "Zul               1\n",
        "Name: boss_name, dtype: int64"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "kills = master_list[master_list.kill == True].copy()\n",
-    "kills.drop_duplicates(subset=['log_id'], inplace=True)\n",
+    "kills.drop_duplicates(subset=['log_id', 'boss_name'], inplace=True)\n",
     "kills.groupby('boss_name')['boss_name'].count()"
    ]
   },
