eda: Count boss kills

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -24,6 +24,7 @@
     "        <li><a href=\"#prog-parse\">Highest Parse on Progression Kill</a></li>\n",
     "        <li><a href=\"#least-damage\">Least Damage on Progression Kills</a></li>\n",
     "        <li><a href=\"#attendance\">Attendance</a></li>\n",
+    "        <li><a href=\"#kills\">Boss Kills</a></li>\n",
     "    </ul></li>\n",
     "</ul>"
    ]
@@ -13357,26 +13358,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'log_analysis' from 'C:\\\\Users\\\\rebecca-barnes\\\\Git-Hub-Repos\\\\wow-analysis\\\\log_analysis.py'>"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "importlib.reload(la)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
    "outputs": [
@@ -15359,6 +15340,45 @@
    "metadata": {},
    "source": [
     "Hmm, there's definitely some things missing, so I'll wait for further info."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='kills'></a>\n",
+    "### Boss Kills"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "boss_name\n",
+       "Fetid Devourer    2\n",
+       "G'huun            1\n",
+       "MOTHER            2\n",
+       "Mythrax           1\n",
+       "Taloc             8\n",
+       "Vectis            1\n",
+       "Zek'voz           4\n",
+       "Zul               1\n",
+       "Name: boss_name, dtype: int64"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kills = master_list[master_list.kill == True].copy()\n",
+    "kills.drop_duplicates(subset=['log_id'], inplace=True)\n",
+    "kills.groupby('boss_name')['boss_name'].count()"
    ]
   },
   {
