eda: Complete highest progression kill parse analysis

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -13336,6 +13336,213 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rankings.to_csv('max_parses.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Max Progression Parse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'log_analysis' from 'C:\\\\Users\\\\rebecca-barnes\\\\Git-Hub-Repos\\\\wow-analysis\\\\log_analysis.py'>"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(la)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>log_id</th>\n",
+       "      <th>log_start</th>\n",
+       "      <th>log_end</th>\n",
+       "      <th>pull_start</th>\n",
+       "      <th>pull_end</th>\n",
+       "      <th>boss_id</th>\n",
+       "      <th>boss_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6165</th>\n",
+       "      <td>dV3RWaQchfv9zT64</td>\n",
+       "      <td>1537322838302</td>\n",
+       "      <td>1537333210687</td>\n",
+       "      <td>10025296</td>\n",
+       "      <td>10372385</td>\n",
+       "      <td>2144</td>\n",
+       "      <td>Taloc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4465</th>\n",
+       "      <td>ArVhTvdPmLf9JHjR</td>\n",
+       "      <td>1537409044919</td>\n",
+       "      <td>1537419704897</td>\n",
+       "      <td>4833701</td>\n",
+       "      <td>5154782</td>\n",
+       "      <td>2141</td>\n",
+       "      <td>MOTHER</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19507</th>\n",
+       "      <td>ybXw42Q1JWgKmaY3</td>\n",
+       "      <td>1538540786600</td>\n",
+       "      <td>1538541597090</td>\n",
+       "      <td>118538</td>\n",
+       "      <td>673514</td>\n",
+       "      <td>2136</td>\n",
+       "      <td>Zek'voz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17144</th>\n",
+       "      <td>T3z8bj7yJxXwKDGL</td>\n",
+       "      <td>1539747081251</td>\n",
+       "      <td>1539752036015</td>\n",
+       "      <td>4144717</td>\n",
+       "      <td>4627003</td>\n",
+       "      <td>2134</td>\n",
+       "      <td>Vectis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3651</th>\n",
+       "      <td>agwcpfjKbLTHrd1W</td>\n",
+       "      <td>1540519454008</td>\n",
+       "      <td>1540522293684</td>\n",
+       "      <td>2255383</td>\n",
+       "      <td>2558126</td>\n",
+       "      <td>2128</td>\n",
+       "      <td>Fetid Devourer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4863</th>\n",
+       "      <td>d3P97v4DpLHmyZkW</td>\n",
+       "      <td>1541652083237</td>\n",
+       "      <td>1541656408391</td>\n",
+       "      <td>289315</td>\n",
+       "      <td>487612</td>\n",
+       "      <td>2145</td>\n",
+       "      <td>Zul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>1rnktHXvcTWD2JzL</td>\n",
+       "      <td>1542337560501</td>\n",
+       "      <td>1542344234987</td>\n",
+       "      <td>5894191</td>\n",
+       "      <td>6441618</td>\n",
+       "      <td>2135</td>\n",
+       "      <td>Mythrax</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18990</th>\n",
+       "      <td>vTWVFQfwcHztbnKL</td>\n",
+       "      <td>1545274330720</td>\n",
+       "      <td>1545284786279</td>\n",
+       "      <td>9218214</td>\n",
+       "      <td>9740142</td>\n",
+       "      <td>2122</td>\n",
+       "      <td>G'huun</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 log_id      log_start        log_end  pull_start  pull_end  \\\n",
+       "6165   dV3RWaQchfv9zT64  1537322838302  1537333210687    10025296  10372385   \n",
+       "4465   ArVhTvdPmLf9JHjR  1537409044919  1537419704897     4833701   5154782   \n",
+       "19507  ybXw42Q1JWgKmaY3  1538540786600  1538541597090      118538    673514   \n",
+       "17144  T3z8bj7yJxXwKDGL  1539747081251  1539752036015     4144717   4627003   \n",
+       "3651   agwcpfjKbLTHrd1W  1540519454008  1540522293684     2255383   2558126   \n",
+       "4863   d3P97v4DpLHmyZkW  1541652083237  1541656408391      289315    487612   \n",
+       "336    1rnktHXvcTWD2JzL  1542337560501  1542344234987     5894191   6441618   \n",
+       "18990  vTWVFQfwcHztbnKL  1545274330720  1545284786279     9218214   9740142   \n",
+       "\n",
+       "       boss_id       boss_name  \n",
+       "6165      2144           Taloc  \n",
+       "4465      2141          MOTHER  \n",
+       "19507     2136         Zek'voz  \n",
+       "17144     2134          Vectis  \n",
+       "3651      2128  Fetid Devourer  \n",
+       "4863      2145             Zul  \n",
+       "336       2135         Mythrax  \n",
+       "18990     2122          G'huun  "
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get only kill logs\n",
+    "first_kills = la.first_kill_logs(master_list)\n",
+    "first_kills"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It was difficult to determine a method for getting the parses for these kills so the review was done manually:\n",
+    "\n",
+    "Stradlock 98% for ilevel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_kills.to_csv('first_kill_logs.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
