docs: Add missing navigation links

--- a/uldir_guild_awards.ipynb
+++ b/uldir_guild_awards.ipynb
@@ -22,6 +22,8 @@
     "        <li><a href=\"#healthstone\">Most Healthstones/Pots Used</a></li>\n",
     "        <li><a href=\"#rankings\">Rankings</a></li>\n",
     "        <li><a href=\"#prog-parse\">Highest Parse on Progression Kill</a></li>\n",
+    "        <li><a href=\"#least-damage\">Least Damage on Progression Kills</a></li>\n",
+    "        <li><a href=\"#attendance\">Attendance</a></li>\n",
     "    </ul></li>\n",
     "</ul>"
    ]
@@ -11073,6 +11075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='healthstones'></a>\n",
     "### Most Healthstones/pots\n",
     "IDs:\n",
     "- Healthstone: 6262\n",
@@ -12457,6 +12460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='rankings'></a>\n",
     "### Rankings"
    ]
   },
@@ -13347,6 +13351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='prog-parse'></a>\n",
     "### Max Progression Parse"
    ]
   },
@@ -13545,6 +13550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='least-damage'></a>\n",
     "### Least Damage on Progression Kills"
    ]
   },
@@ -14527,6 +14533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='attendance'></a>\n",
     "### Attendance"
    ]
   },
