chore: Update doc navigation

--- a/bod_guild_awards.ipynb
+++ b/bod_guild_awards.ipynb
@@ -15,29 +15,53 @@
     "        <li><a href=\"#multi-sided\">Multi-Sided Strike</a></li>\n",
     "        <li><a href=\"#jf_dispells\">Dispells</a></li>\n",
     "    </ul></li>\n",
-    "<li><a href=\"#vectis\">Vectis</a>\n",
+    "<li><a href=\"#grong\">Grong</a>\n",
+    "<li><a href=\"#opulence\">Opulence</a>\n",
     "    <ul>\n",
-    "        <li><a href=\"#soaks\">Plague Bomb (Soaks)</a></li>\n",
-    "        <li><a href=\"#v-stack\">Lingering Infection (Debuff Stacks)</a></li>\n",
+    "        <li><a href=\"#volatile\">Volatile Charge</a></li>\n",
+    "        <li><a href=\"#punish\">Flames of Punishment</a></li>\n",
+    "        <li><a href=\"#jet\">Flame Jet</a></li>\n",
     "    </ul></li>\n",
-    "<li><a href=\"#fetid\">Fetid</a>\n",
+    "<li><a href=\"#conclave\">Conclave of the Chosen</a>\n",
     "    <ul>\n",
-    "        <li><a href=\"#f-stacks\">Debuff Damage</a></li>\n",
-    "        <li><a href=\"#add-dam\">Add Damage</a></li>\n",
+    "        <li><a href=\"#c_dispels\">Dispels</a></li>\n",
+    "        <li><a href=\"#c_adds\">Add Damage</a></li>\n",
+    "        <li><a href=\"#raptors\">Jagged Claws (Raptors)</a></li>\n",
+    "        <li><a href=\"#c_frog\">Krag'wa's Wrath (Frog Jumps)</a></li>\n",
     "    </ul></li>\n",
-    "<li><a href=\"#zul\">Zul</a>\n",
-    "<li><a href=\"#mythrax\">Mythrax</a>\n",
+    "<li><a href=\"#rasta\">Rastakhan</a>\n",
     "    <ul>\n",
-    "        <li><a href=\"#beam\">Obliteration Blast (Beam)</a></li>\n",
-    "        <li><a href=\"#m-stacks\">Annihilation (Debuff Stacks)</a></li>\n",
-    "    </ul></li>\n",
-    "<li><a href=\"#ghuun\">G'Huun</a>\n",
-    "    <ul>\n",
-    "        <li><a href=\"#fear\">Gaze of G'huun (Fears)</a></li>\n",
-    "        <li><a href=\"#orb\">Virulent Corruption (Orb)</a></li>\n",
-    "        <li><a href=\"#growth\">Malignant Growth</a></li>\n",
-    "        <li><a href=\"#dunk\">Power Matrix Dunk</a></li>\n",
+    "        <li><a href=\"#r_frog\">Toad Toxin</a></li>\n",
+    "        <li><a href=\"#leap\">Meteor Leap</a></li>\n",
+    "        <li><a href=\"#fire\">Plague of Fire</a></li>\n",
+    "        <li><a href=\"#orbs\">Dread Reaping (Orbs)</a></li>\n",
     "        <li><a href=\"#stuns\">Interrupts/Stuns</a></li>\n",
+    "    </ul></li>\n",
+    "<li><a href=\"#mekka\">Mekkatorque</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#m_cc\">Crowd Control</a></li>\n",
+    "        <li><a href=\"#cannon\">Buster Cannon</a></li>\n",
+    "        <li><a href=\"#sheep\">Sheep Shrapnel</a></li>\n",
+    "        <li><a href=\"#robot\">Robot Management</a></li>\n",
+    "    </ul></li>\n",
+    "<li><a href=\"#stormwall\">Stormwall Blockade</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#seaswell\">Sea Swell</a></li>\n",
+    "        <li><a href=\"#volley\">Jolting Volley (Lightning)</a></li>\n",
+    "        <li><a href=\"#seastorm\">Sea Storm</a></li>\n",
+    "        <li><a href=\"#robot\">Robot Management</a></li>\n",
+    "    </ul></li>\n",
+    "<li><a href=\"#jaina\">Jaina</a>\n",
+    "    <ul>\n",
+    "        <li><a href=\"#barrel\">Barrel Removal</a></li>\n",
+    "        <li><a href=\"#avalanche\">Avalanche</a></li>\n",
+    "        <li><a href=\"#pitch\">Searing Pitch</a></li>\n",
+    "        <li><a href=\"#block\">Frozen Solid (Ice Blocks)</a></li>\n",
+    "        <li><a href=\"#touch\">Chilling Touch</a></li>\n",
+    "        <li><a href=\"#ray\">Glacial Ray</a></li>\n",
+    "        <li><a href=\"#blast\">Freezing Blast</a></li>\n",
+    "        <li><a href=\"#ring\">Ring of Ice</a></li>\n",
+    "        <li><a href=\"#shards\">Grasp of Frost (Ice Shards)</a></li>\n",
     "    </ul></li>\n",
     "<li><a href=\"#overall\">Overall</a>\n",
     "    <ul>\n",
@@ -2275,6 +2299,7 @@
     "<a id='grong'></a>\n",
     "## Grong\n",
     "\n",
+    "<a id='g_interrupts'></a>\n",
     "### Interrupts"
    ]
   },
@@ -2654,8 +2679,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='opulence'></a>\n",
     "## Opulence\n",
     "\n",
+    "<a id='volatile'></a>\n",
     "### Volatile Charge\n",
     "\n",
     "Spell IDs: \n",
@@ -3181,6 +3208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='punish'></a>\n",
     "### Flames of Punishment\n",
     "\n",
     "Spell IDs:\n",
@@ -3548,6 +3576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='jet'></a>\n",
     "### Flame Jet\n",
     "\n",
     "Spell ID: 285479"
@@ -3881,8 +3910,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='conclave'></a>\n",
     "## Conclave of the Chosen\n",
     "\n",
+    "<a id='c_dispels'></a>\n",
     "### Dispels\n",
     "\n",
     "Only for curses. Spell IDs:\n",
@@ -4041,6 +4072,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='c_adds'></a>\n",
     "### Add Damage Done"
    ]
   },
@@ -4314,7 +4346,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Jagged Claws\n",
+    "<a id='raptors'></a>\n",
+    "### Jagged Claws (Raptors)\n",
     "\n",
     "Damage from adds. Spell ID: 286673"
    ]
@@ -4560,6 +4593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='c_frog'></a>\n",
     "### Krag'wa's Wrath\n",
     "\n",
     "Frog jumps. Spell ID: 282636"
@@ -4802,8 +4836,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='rasta'></a>\n",
     "## Rastakhan\n",
     "\n",
+    "<a id='r_frog'></a>\n",
     "### Toad Toxin\n",
     "\n",
     "Spell ID: 285044"
@@ -5085,6 +5121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='leap'></a>\n",
     "### Meteor Leap\n",
     "\n",
     "Spell ID: 284688"
@@ -5346,6 +5383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='fire'></a>\n",
     "### Plague of Fire\n",
     "\n",
     "Spell ID: 285349"
@@ -5640,9 +5678,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dread Reaping\n",
+    "<a id='orbs'></a>\n",
+    "### Dread Reaping (Orbs)\n",
     "\n",
-    "Orbs. Spell ID: 287147"
+    "Spell ID: 287147"
    ]
   },
   {
@@ -5886,8 +5925,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='mekka'></a>\n",
     "## Mekkatorque\n",
     "\n",
+    "<a id='m_cc'></a>\n",
     "### Roots/Snares/Stuns/Grips\n",
     "\n",
     "- Mage: Frost Nova (122)\n",
@@ -6364,6 +6405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='cannon'></a>\n",
     "### Buster Cannon\n",
     "\n",
     "Spell ID: 282182"
@@ -6638,6 +6680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='sheep'></a>\n",
     "### Sheep Shrapnel\n",
     "\n",
     "Spell ID: 287891"
@@ -6890,6 +6933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='robot'></a>\n",
     "### Robot Managment\n",
     "\n",
     "Tampering. Spell ID: 286105"
@@ -7157,9 +7201,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='stormwall'></a>\n",
     "## Stormwall Blockade\n",
     "\n",
-    "### Least Sea Swell\n",
+    "<a id='seaswell'></a>\n",
+    "### Sea Swell\n",
     "Spell ID: 285125"
    ]
   },
@@ -7341,7 +7387,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Jolting Volley\n",
+    "<a id='volley'></a>\n",
+    "### Jolting Volley (Lightning)\n",
     "\n",
     "Spell ID: 287169"
    ]
@@ -7577,6 +7624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='seastorm'></a>\n",
     "### Sea Storm\n",
     "\n",
     "Spell ID: 284365"
@@ -7813,8 +7861,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='jaina'></a>\n",
     "## Jaina\n",
     "\n",
+    "<a id='barrel'></a>\n",
     "### Barrel Removal\n",
     "\n",
     "Spell ID: 285497"
@@ -8078,6 +8128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='avalanche'></a>\n",
     "### Avalanche\n",
     "\n",
     "Spell ID: 287585"
@@ -8622,6 +8673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='pitch'></a>\n",
     "### Searing Pitch\n",
     "\n",
     "Spell ID: 287365"
@@ -9177,9 +9229,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ice Blocks\n",
+    "<a id='block'></a>\n",
+    "### Frozen Solid (Ice Blocks)\n",
     "\n",
-    "Frozen Solid. Spell ID: 287490"
+    "Spell ID: 287490"
    ]
   },
   {
@@ -9719,6 +9772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='touch'></a>\n",
     "### Chilling Touch\n",
     "\n",
     "Spell ID: 287993"
@@ -10364,6 +10418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='ray'></a>\n",
     "### Glacial Ray\n",
     "\n",
     "Spell ID: 288363"
@@ -10700,6 +10755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='blast'></a>\n",
     "### Freezing Blast\n",
     "\n",
     "Spell ID: 285177"
@@ -11221,6 +11277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='ring'></a>\n",
     "### Ring of Ice\n",
     "\n",
     "Spell ID: 285459"
@@ -11591,9 +11648,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grasp of Frost\n",
+    "<a id='shards'></a>\n",
+    "### Grasp of Frost (Ice Shards)\n",
     "\n",
-    "Ice particles. Spell ID: 287626"
+    "Spell ID: 287626"
    ]
   },
   {
