extract: Obtain new logs

--- a/bod_guild_awards.ipynb
+++ b/bod_guild_awards.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -799,6 +799,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating file 8nQ1rAbfwBFpaWjt\n",
+      "Creating file xJQ4AF871CHY6dgZ\n",
+      "Creating file Yy3AxfZv6TgdXQzN\n",
+      "Creating file YbDkA7V8aTgrzc4d\n",
+      "Creating file 4ZFkyvzPB1q8DYfH\n",
+      "Creating file p9cHaBFjYZkmKvRf\n",
+      "Creating file wqc1mgD9kN6pQMWH\n",
+      "Creating file ZxwFWGJHCRgfDn6B\n",
+      "Creating file GBy36vj1hcHnYrA8\n",
+      "Creating file YcrhymBFzQjf1wqL\n",
+      "Creating file 4jcRVGTyHNbfYdK8\n",
+      "Creating file BFkPjnA8WZaLT6fQ\n",
+      "Creating file 8HNprPxzBqGV1tkd\n",
+      "Creating file pZ8dVczDgtkLXbmy\n",
       "\n",
       "All files created.\n",
       "\n",
@@ -807,8 +821,10 @@
       "Log ID 39f2VGXaFDPdqbpm done.\n",
       "Log ID 3Rm1jktVXyM8JYpD done.\n",
       "Log ID 48DMZQgHCAmVnXGY done.\n",
+      "Log ID 4jcRVGTyHNbfYdK8 done.\n",
       "Log ID 4r72XaA6CGbJDHdQ done.\n",
       "Log ID 4yqhHd78P6JmxVgA done.\n",
+      "Log ID 4ZFkyvzPB1q8DYfH done.\n",
       "Log ID 6D3kj1MH9qdGRWh7 done.\n",
       "Log ID 6hpXA92w7DyrfGFJ done.\n",
       "Log ID 6vGW8nAf4Tr3YXc7 done.\n",
@@ -816,6 +832,8 @@
       "Log ID 7NmgfrcMDtARwj1X done.\n",
       "Log ID 83fmtrcMd1QAGbPX done.\n",
       "Log ID 8A4bMkm9jrP3BdNp done.\n",
+      "Log ID 8HNprPxzBqGV1tkd done.\n",
+      "Log ID 8nQ1rAbfwBFpaWjt done.\n",
       "Log ID 9BMrygDJfw71aLdv done.\n",
       "Log ID Adjv2WVN3RnMJmhT done.\n",
       "Log ID AmWzPKb2yBLr4TM8 done.\n",
@@ -823,6 +841,7 @@
       "Log ID b23RxZy4LQCqvFnr done.\n",
       "Log ID B6qyKdHYhA2WDr9x done.\n",
       "Log ID b7GvK2hqQ6WcYV1a done.\n",
+      "Log ID BFkPjnA8WZaLT6fQ done.\n",
       "Log ID bG3vrKFA2pwk8fcT done.\n",
       "Log ID BMXcpTVq6knrtzQv done.\n",
       "Log ID CAfkmZBRgWqcGwYy done.\n",
@@ -838,6 +857,7 @@
       "Log ID FwdP9AGaWr463RJQ done.\n",
       "Log ID fwWhrXk6aP3zVvM4 done.\n",
       "Log ID g2LA7QDjvdBkyb8w done.\n",
+      "Log ID GBy36vj1hcHnYrA8 done.\n",
       "Log ID gGZmyw7KkFQnXNft done.\n",
       "Log ID gZcHzxvq9JBhQXGT done.\n",
       "Log ID hAgJw89KPcdfNZLF done.\n",
@@ -859,52 +879,40 @@
       "Log ID nmytFgqjNLAVrGhQ done.\n",
       "Log ID nP2TDkqJFKGjNHcQ done.\n",
       "Log ID nYNkFzwqXycRWb3f done.\n",
+      "Log ID p9cHaBFjYZkmKvRf done.\n",
       "Log ID PbNV4BRGJtTm6jvp done.\n",
       "Log ID pdgTJPmYfahQbB19 done.\n",
       "Log ID pHFAY7Qgjv9fayRN done.\n",
+      "Log ID pZ8dVczDgtkLXbmy done.\n",
       "Log ID Q4TN8Pw91YMZHXBf done.\n",
       "Log ID QDv6xHAJXzFy43mK done.\n",
       "Log ID QkM7TRzKqfbHAN3J done.\n",
       "Log ID Qm69FVxcaTG2dgvh done.\n",
       "Log ID qmXPL4wD27kH86GC done.\n",
       "Log ID qTXQ3kHMwvZRJC9h done.\n",
-      "Log ID QzNhwagDRZX4FfBA done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rebecca\\Git-Hub-Repos\\wow-analysis\\warcraft_logs_fn.py:196: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  df = pd.concat([df, merged_df])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Log ID QzNhwagDRZX4FfBA done.\n",
       "Log ID RdPGqtm8Jzrb2HTw done.\n",
       "Log ID rv3DkQPGbxndXWmw done.\n",
       "Log ID TwM7pNkXLtbfqcYG done.\n",
       "Log ID vhb4rcfZyYDXWJ1w done.\n",
       "Log ID WjrATb2Yg6FQxmKh done.\n",
       "Log ID WN93HbRwqGgv2xyk done.\n",
+      "Log ID wqc1mgD9kN6pQMWH done.\n",
       "Log ID Wz1JAwcQyntVkmTb done.\n",
       "Log ID X43Cz679pFkghawb done.\n",
       "Log ID XAnR3r9Kt2VzmcBj done.\n",
       "Log ID XDPn6wRcY1BA4JT2 done.\n",
+      "Log ID xJQ4AF871CHY6dgZ done.\n",
       "Log ID xQ6WYrZNRM1FLtmH done.\n",
       "Log ID Y4zAXFLKxcdHMhgr done.\n",
+      "Log ID YbDkA7V8aTgrzc4d done.\n",
+      "Log ID YcrhymBFzQjf1wqL done.\n",
       "Log ID yf7rDvctTVZzLHBj done.\n",
       "Log ID YGNFr2MH37zXD9Th done.\n",
       "Log ID YMdTDp37JnKLbw1j done.\n",
       "Log ID YPtpwXbAVNgmGr6L done.\n",
+      "Log ID Yy3AxfZv6TgdXQzN done.\n",
+      "Log ID ZxwFWGJHCRgfDn6B done.\n",
       "\n",
       "Dataframe created.\n",
       "\n",
@@ -918,7 +926,7 @@
    ],
    "source": [
     "# Import key and player list\n",
-    "#api_key = api_key.key\n",
+    "api_key = api_key.key\n",
     "player_list = pd.read_csv('player_list.csv', encoding='iso-8859-1')\n",
     "\n",
     "# Collect guild info\n",
@@ -16670,9 +16678,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:data_science]",
+   "display_name": "Python [conda env:dand]",
    "language": "python",
-   "name": "conda-env-data_science-py"
+   "name": "conda-env-dand-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -16684,7 +16692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
